Create action to remove a vendor

--- a/client/admin/src/mealorder/components/meal-order-vendor-list.html
+++ b/client/admin/src/mealorder/components/meal-order-vendor-list.html
@@ -219,8 +219,17 @@
                 }
             };
 
+            static get actions() {
+                return {
+                    removeVendor: vendor => ({
+                        type: MealOrderAdminApp.ArrayAction.REMOVE_VENDOR,
+                        vendor
+                    }),
+                }
+            }
+
             _removeVendor(e) {
-                this.dispatchEvent(new CustomEvent('remove-vendor', {detail: e.model.index}));
+                this.dispatch("removeVendor", this.vendors[e.model.index].title);
             }
         }
 
