--- a/client/admin/src/mealorder/components/meal-order-vendor-list.html
+++ b/client/admin/src/mealorder/components/meal-order-vendor-list.html
@@ -57,10 +57,6 @@
                 display: block;
             }
 
-            .phone {
-                text-align: left;
-            }
-
             .non-select {
                 -webkit-touch-callout: none; /* iOS Safari */
                 -webkit-user-select: none; /* Safari */
@@ -83,11 +79,12 @@
             }
 
             .phone {
-                width: 15%
+                width: 15%;
+                text-align: left;
             }
 
             .deadline {
-                width: 10%;
+                width: 13%;
                 text-align: right;
             }
 
@@ -146,8 +143,8 @@
                     width: 98%;
                 }
 
-                #main-content {
-                    width: 1000px;
+                .vendor {
+                    display: none;
                 }
 
                 .email {
@@ -163,10 +160,43 @@
                 .icons {
                     width: 12%;
                 }
+
+                @media only screen and (max-width: 768px) {
+                    #header {
+                        justify-content: flex-end;
+                        width: 98%;
+                        margin-bottom: 3%;
+                    }
+
+                    .vendor {
+                        display: none;
+                    }
+
+                    .phone {
+                        display: none;
+                    }
+
+                    .deadline {
+                        display: none;
+                    }
+
+                    .icons {
+                        display: none;
+                    }
+
+                    .vendor-name {
+                        width: 40%;
+                    }
+
+                    .email {
+                        width: 60%;
+                    }
+
+                }
             }
         </style>
         <div id="header">
-            <h1>Поставщики</h1>
+            <h1 class="vendor">Поставщики</h1>
             <paper-icon-button icon="add" class="add-vendor"
                                on-click="_addVendorDialog"></paper-icon-button>
         </div>
@@ -178,22 +208,19 @@
                 <div class="deadline">Заказать до</div>
                 <div class="icons"></div>
             </div>
-            <iron-list id="list" items="[[vendors]]" as="vendor" scroll-target="document"
+            <iron-list selection-enabled on-selected-item-changed="_openDetailsDialog" id="list"
+                       items="[[vendors]]" as="vendor" scroll-target="document"
                        scroll-offset="200">
                 <template>
-                    <div class="non-select">
-                        <div class="item">
-                            <div class="vendor-name">[[vendor.title]]</div>
-                            <div class="email">[[vendor.email]]</div>
-                            <div class="phone">[[vendor.phone]]</div>
-                            <div class="deadline">[[vendor.deadline]]</div>
-                            <div class="icons">
-                                <div class="icons-container">
-                                    <paper-icon-button icon="create"
-                                                       on-click="_editVendor"></paper-icon-button>
-                                    <paper-icon-button icon="close"
-                                                       on-click="_removeVendor"></paper-icon-button>
-                                </div>
+                    <div class="item">
+                        <div class="vendor-name">[[vendor.title]]</div>
+                        <div class="email">[[vendor.email]]</div>
+                        <div class="phone">[[vendor.phone]]</div>
+                        <div class="deadline">[[vendor.deadline]]</div>
+                        <div class="icons">
+                            <div class="icons-container">
+                                <paper-icon-button icon="create"
+                                                   on-click="_openDetailsDialog"></paper-icon-button>
                             </div>
                         </div>
                     </div>
@@ -261,17 +288,29 @@
                     this.dispatch('vendorManage', properties);
                 }
 
-                _editVendor(e) {
+
+                _openDetailsDialog(e) {
                     const properties = {};
                     properties.tagName = MealOrderAdminApp.AdminVendorDialog.is;
                     properties.mode = 'update';
                     const inputData = {};
-                    inputData.newTitle = this.vendors[e.model.index].title;
-                    inputData.newMail = this.vendors[e.model.index].email;
-                    inputData.phone = this.vendors[e.model.index].phone;
-                    inputData.deadline = this.vendors[e.model.index].deadline;
-                    properties.inputData = inputData;
-                    this.dispatch('vendorManage', properties);
+
+                    if (this.$.list.selectedItem) {
+                        inputData.newTitle = this.$.list.selectedItem.title;
+                        inputData.newMail = this.$.list.selectedItem.email;
+                        inputData.phone = this.$.list.selectedItem.phone;
+                        inputData.deadline = this.$.list.selectedItem.deadline;
+                        properties.inputData = inputData;
+                        this.dispatch('vendorManage', properties);
+                    }
+                    if (e.model) {
+                        inputData.newTitle = this.vendors[e.model.index].title;
+                        inputData.newMail = this.vendors[e.model.index].email;
+                        inputData.phone = this.vendors[e.model.index].phone;
+                        inputData.deadline = this.vendors[e.model.index].deadline;
+                        properties.inputData = inputData;
+                        this.dispatch('vendorManage', properties);
+                    }
                 }
 
                 _removeVendor(e) {
