--- a/client/admin/src/mealorder/components/meal-order-vendor-list.html
+++ b/client/admin/src/mealorder/components/meal-order-vendor-list.html
@@ -21,15 +21,15 @@
 <link rel="import" href="../../../bower_components/iron-list/iron-list.html">
 <link rel="import" href="../../../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../../../bower_components/paper-icon-button/paper-icon-button.html">
-<link rel="import" href="../../../bower_components/iron-form/iron-form.html">
+<link rel="import" href="../../../bower_components/paper-fab-speed-dial/paper-fab-speed-dial.html">
+<link rel="import"
+      href="../../../bower_components/paper-fab-speed-dial/paper-fab-speed-dial-action.html">
 <link rel="import" href="../shell/meal-order-admin-app-namespace.html">
 <link rel="import" href="../shell/redux-store.html">
-
 <dom-module id="meal-order-vendor-list">
     <template>
         <style>
             #header {
-                @apply --layout-horizontal;
                 display: flex;
                 cursor: pointer;
                 justify-content: space-between;
@@ -55,16 +55,6 @@
 
             .item:hover .icons-container {
                 display: block;
-            }
-
-            .non-select {
-                -webkit-touch-callout: none; /* iOS Safari */
-                -webkit-user-select: none; /* Safari */
-                -khtml-user-select: none; /* Konqueror HTML */
-                -moz-user-select: none; /* Firefox */
-                -ms-user-select: none; /* Internet Explorer/Edge */
-                user-select: none;
-                /* Non-prefixed version, currently supported by Chrome and Opera */
             }
 
             .vendor-name {
@@ -108,16 +98,9 @@
                 width: 70%;
             }
 
-            paper-icon-button.add-vendor {
-                --paper-icon-button: {
-                    --iron-icon-fill-color: white;
-                    background-color: #0085d3;
-                    border-radius: 50px;
-                    padding: 12px;
-                    width: 50px;
-                    height: 50px;
-                    box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.5);
-                }
+            #fab {
+                --paper-fab-speed-dial-background: #0085d3;
+                --paper-fab-speed-dial-position: fixed;
             }
 
             @media only screen and (max-width: 1300px) {
@@ -195,38 +178,39 @@
                 }
             }
         </style>
-        <div id="header">
-            <h1 class="vendor">Поставщики</h1>
-            <paper-icon-button icon="add" class="add-vendor"
-                               on-click="_addVendorDialog"></paper-icon-button>
-        </div>
-        <div id="main-content">
-            <div class="item non-select header">
-                <div class="vendor-name">Название</div>
-                <div class="email">Почта</div>
-                <div class="phone">Телефон</div>
-                <div class="deadline">Заказать до</div>
-                <div class="icons"></div>
+            <div id="header">
+                <h1 class="vendor">Поставщики</h1>
             </div>
-            <iron-list selection-enabled on-selected-item-changed="_openDetailsDialog" id="list"
-                       items="[[vendors]]" as="vendor" scroll-target="document"
-                       scroll-offset="200">
-                <template>
-                    <div class="item">
-                        <div class="vendor-name">[[vendor.title]]</div>
-                        <div class="email">[[vendor.email]]</div>
-                        <div class="phone">[[vendor.phone]]</div>
-                        <div class="deadline">[[vendor.deadline]]</div>
-                        <div class="icons">
-                            <div class="icons-container">
-                                <paper-icon-button icon="create"
-                                                   on-click="_openDetailsDialog"></paper-icon-button>
+            <div id="main-content">
+                <div class="item non-select header">
+                    <div class="vendor-name">Название</div>
+                    <div class="email">Почта</div>
+                    <div class="phone">Телефон</div>
+                    <div class="deadline">Заказать до</div>
+                    <div class="icons"></div>
+                </div>
+                <iron-list selection-enabled on-selected-item-changed="_openDetailsDialog" id="list"
+                           items="[[vendors]]" as="vendor" scroll-target="document"
+                           scroll-offset="200">
+                    <template>
+                        <div class="item">
+                            <div class="vendor-name">[[vendor.title]]</div>
+                            <div class="email">[[vendor.email]]</div>
+                            <div class="phone">[[vendor.phone]]</div>
+                            <div class="deadline">[[vendor.deadline]]</div>
+                            <div class="icons">
+                                <div class="icons-container">
+                                    <paper-icon-button icon="create"
+                                                       on-click="_openDetailsDialog"></paper-icon-button>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </template>
-            </iron-list>
-        </div>
+                    </template>
+                </iron-list>
+            </div>
+        <paper-fab-speed-dial on-iron-overlay-opened="_addVendorDialog" id="fab"
+                              dynamicAlign="true">
+        </paper-fab-speed-dial>
     </template>
     <script>
         {
@@ -286,6 +270,7 @@
                     properties.tagName = MealOrderAdminApp.AdminVendorDialog.is;
                     properties.mode = 'add';
                     this.dispatch('vendorManage', properties);
+                    this.$.fab.close();
                 }
 
 
